Reorganizing files in UseR2019

--- a/useR2019-July2019/header.tex
+++ b/useR2019-July2019/header.tex
@@ -25,6 +25,8 @@
 \newcommand{\bs}[1]{\boldsymbol{#1}}
 \newcommand{\R}{\textnormal{\sffamily\bfseries R}}
 \newcommand{\pkg}[1]{{\fontseries{b}\selectfont #1}}
+\newcommand{\red}[1]{\textcolor{red}{#1}}
+\newcommand{\blue}[1]{\textcolor{blue}{#1}}
 \newcolumntype{C}[1]{>{\centering\arraybackslash}m{#1}}
 %% Natbib is a popular style for formatting references.
 %\usepackage{natbib} %doesn't work with beamer
