--- a/useR2019-July2019/doc_suffix.tex
+++ b/useR2019-July2019/doc_suffix.tex
@@ -19,7 +19,10 @@
     \begin{block}{}
       \begin{center}
         \ldots~Thank you for attention~\ldots\\
-        \url{https://ecology.ghislainv.fr/jSDM}
+        \includegraphics[height=0.3cm]{figs/Twitter_Bird.png}
+        \texttt{@ghislainv}\\
+        \url{https://ecology.ghislainv.fr}\\
+        ghislain.vieilledent@cirad.fr | jeanne.clement16@laposte.net
       \end{center}
     \end{block}
 %     \vspace{1cm}
