--- a/ATBC2019-The-Fate-of-African-Forests/header.tex
+++ b/ATBC2019-The-Fate-of-African-Forests/header.tex
@@ -25,7 +25,7 @@
 %% Natbib is a popular style for formatting references.
 %\usepackage{natbib} %doesn't work with beamer
 
-\title[The fate of African tropical forests]{\textbf{The fate of African tropical forests:}\\High resolution continental maps of deforestation risk and future forest cover}
+\title[The fate of tropical forests]{\textbf{The fate of tropical forests:}\\High resolution global maps of deforestation risk and future forest cover}
 %\subtitle{} 
 %\author{G. Vieilledent}
 %\institute{JRC, CIRAD}
@@ -70,7 +70,7 @@
         \tableofcontents[sections={1-2},currentsection]
       \end{column}
       \begin{column}{0.5\textwidth}
-        \tableofcontents[sections={3-4},currentsection]
+        \tableofcontents[sections={3-5},currentsection]
       \end{column}
     \end{columns}
   \end{frame}
