--- a/Seminaire-fragmentation-RELIQUES/doc_suffix.tex
+++ b/Seminaire-fragmentation-RELIQUES/doc_suffix.tex
@@ -3,7 +3,7 @@
 {
   % Use background image
   \usebackgroundtemplate{%
-    \includegraphics[height=\paperheight,width=\paperwidth]{figs/Canopy}
+    \includegraphics[height=\paperheight,width=\paperwidth]{figs/Canopy.jpg}
   }
   \setbeamertemplate{navigation symbols}{}
   % Remove shadow from block
